# dockerlens

./: .gitignore  README.md  pyproject.toml  readme.md
dockerlens/: __init__.py  cli.py  fixer.py  linter.py  parser.py
dockerlens/rules/: __init__.py
tests/: test_fixer.py  test_linter.py  test_parser.py
tests/fixtures/: bad.dockerfile  good.dockerfile
