[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dockerlens"
version = "1.0.0"
description = "🔍 Smart Dockerfile linter, analyzer & auto-fixer CLI — Catch anti-patterns, shrink images, harden security"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "gitstq"}
]
keywords = ["dockerfile", "docker", "linter", "optimizer", "security", "container", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
dockerlens = "dockerlens.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dockerlens*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
